so left button was hidden behind right but i fixed it

--- a/style.css
+++ b/style.css
@@ -375,6 +375,14 @@ input:checked + .slider:before {
     right: 20px; /* Bottom right corner */
 }
 
+.go-left {
+    left: 20px; /* Bottom left corner */
+}
+
+.go-right {
+    right: 20px; /* Bottom right corner */
+}
+
 /* "Show me More" button style */
 .more-info-button {
     background-color: #00356B; /* Yale Blue background */
